# edgeless

./: .envrc  .gitignore  BUILDING.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING_GUIDE.md  CONTRIBUTORS.txt  Cargo.toml  LICENSE  LICENSE-MIT.txt  README.md  README.old.md  dump.rdb  flake.nix  link_examples.sh  log  node-2.toml  out.csv  rustfmt.toml
cloud-offloading/: Cargo.toml  README.md  ec2-user-data.sh
cloud-offloading/src/: ec2-user-data.sh  main.rs
edgeless_api/: Cargo.toml  README.md  build.rs
edgeless_api/proto/: agent_api.proto  messages.proto  services.proto
edgeless_api/src/: agent.rs  common.rs  container_function.rs  controller.rs  domain_registration.rs  function_instance.rs  function_instance_structs.rs  guest_api_function.rs  guest_api_host.rs  invocation.rs  lib.rs  link.rs  native_runtime.rs  node_management.rs  node_managment.rs  node_registration.rs  orc.rs  proxy_instance.rs  resource_configuration.rs  util.rs  workflow_instance.rs  workflow_instance_structs.rs
edgeless_api/src/agent/: mod.rs
edgeless_api/src/api/: mod.rs
edgeless_api/src/coap_impl/: agent.rs  function_instance.rs  invocation.rs  link.rs  mod.rs  node_management.rs  node_register.rs  node_registration.rs  orchestration.rs  proxy_instance.rs  resource_configuration.rs
edgeless_api/src/common/: mod.rs
edgeless_api/src/con/: mod.rs
edgeless_api/src/function_instance/: mod.rs
edgeless_api/src/grpc_impl/: agent.rs  common.rs  con.rs  container_function.rs  container_runtime.rs  controller.rs  domain_register.rs  domain_registration.rs  function_instance.rs  guest_api_function.rs  guest_api_host.rs  invocation.rs  link.rs  mod.rs  node_management.rs  node_registration.rs  orc.rs  proxy_instance.rs  resource_configuration.rs  resource_provider.rs  tls_config.rs  tls_config_mtls.rs  tls_config_none.rs  workflow_instance.rs
edgeless_api/src/invocation/: mod.rs
edgeless_api/src/orc/: mod.rs
edgeless_api/src/outer/: agent.rs  container_runtime.rs  controller.rs  domain_register.rs  mod.rs  node_register.rs  orc.rs
edgeless_api_core/: Cargo.toml  README.md
edgeless_api_core/src/: coap_mapping.rs  common.rs  event_metadata.rs  event_timestamp.rs  instance_id.rs  invocation.rs  lib.rs  node_registration.rs  port.rs  resource_configuration.rs
edgeless_bal/: Cargo.toml
edgeless_bal/src/: file_log.rs  http_egress.rs  http_ingress.rs  lib.rs  portal.rs  redis.rs
edgeless_benchmark/: Cargo.toml  README.md
edgeless_benchmark/resources/: metrics_collector.rs
edgeless_benchmark/scripts/: plot.py  plot_wf_latencies.py
edgeless_benchmark/src/: arrival_model.rs  csv_dumper.rs  edgeless_benchmark.rs  engine.rs  lib.rs  redis_dumper.rs  utils.rs  workflow_type.rs
edgeless_build/: Cargo.toml
edgeless_build/src/: lib.rs
edgeless_cli/: Cargo.toml  build.rs  cli.toml
edgeless_cli/src/: edgeless_benchmark.rs  edgeless_cli.rs  edgeless_cli.rs.orig  lib.rs  workflow_spec.rs
edgeless_cloud_offloading/: Cargo.toml  README.md  config.toml
edgeless_cloud_offloading/src/: config.rs  ec2-user-data.sh  lib.rs  main.rs  rebalancer.rs
edgeless_con/: Cargo.toml  Dockerfile
edgeless_con/src/: controller.rs  lib.rs  orchestration_logic.rs  orchestration_utils.rs
edgeless_config/: Cargo.toml
edgeless_config/src/: actor.rs  actor_class.rs  files.rs  inner_structure.rs  lib.rs  port.rs  port_class.rs  resource.rs  resource_class.rs  workflow.rs
edgeless_container_function/: Cargo.toml
edgeless_container_function/src/: container_function.rs  lib.rs
edgeless_dda/: Cargo.toml  README.md  build.rs
edgeless_dda/protos/: com.proto  state.proto  store.proto
edgeless_dda/src/: lib.rs
edgeless_embedded/: Cargo.toml
edgeless_embedded/src/: agent.rs  coap.rs  dataplane.rs  invocation.rs  lib.rs  resource.rs  resource_configuration.rs
edgeless_embedded_emu/: Cargo.toml  setup.sh
edgeless_embedded_emu/src/: main.rs
edgeless_embedded_esp32/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
edgeless_embedded_esp32/.cargo/: config.toml
edgeless_embedded_esp32/src/: agent.rs  coap.rs  dataplane.rs  epaper_display.rs  epaper_display_impl.rs  invocation.rs  lcd_display_impl.rs  main.rs  mock_display.rs  mock_sensor.rs  resource.rs  scd30_sensor.rs  scd30_sensor_impl.rs  wifi.rs
edgeless_function/: Cargo.toml
edgeless_function/src/: export.rs  imports.rs  lcg.rs  lib.rs  logging.rs  memory.rs  output_api.rs  owned_data.rs
edgeless_function/wit/: edgefunction.wit
edgeless_function_core/: Cargo.toml
edgeless_function_core/src/: lib.rs
edgeless_function_macro/: Cargo.toml
edgeless_function_macro/src/: lib.rs
edgeless_http/: Cargo.toml
edgeless_http/src/: lib.rs
edgeless_inabox/: Cargo.toml
edgeless_inabox/src/: lib.rs
edgeless_link_multicast/: Cargo.toml
edgeless_link_multicast/src/: common.rs  controller.rs  lib.rs  link.rs
edgeless_node/: Cargo.toml  Dockerfile  README.md  build.rs
edgeless_node/docker/: README.md
edgeless_node/src/: lib.rs  node_subscriber.rs  proxy.rs
edgeless_orc/: Cargo.toml  Dockerfile  README.md
edgeless_orc/src/: active_instance.rs  affinity_level.rs  client_desc.rs  deploy_intent.rs  deployment_requirements.rs  domain_info.rs  domain_subscriber.rs  lib.rs  metrics_collector.rs  node_register.rs  node_register_client.rs  orchestration_logic.rs  orchestrator.rs  orchestrator_task.rs  proxy.rs  proxy_none.rs  proxy_redis.rs  resource_provider.rs  subscriber.rs
edgeless_state/: Cargo.toml  build.rs
edgeless_state/src/: edgeless_state.rs  lib.rs
edgeless_systemtests/: Cargo.toml
edgeless_systemtests/src/: lib.rs
edgeless_telemetry/: Cargo.toml  README.md
edgeless_telemetry/components/: docker-compose.yml
edgeless_telemetry/examples/: control_plane_tracer_usage.rs
edgeless_telemetry/src/: control_plane_tracer.rs  elasticsearch_api.rs  elasticsearch_resources.rs  lib.rs  performance_target.rs  prometheus_target.rs  telemetry_events.rs
functions/bench_mapreduce/: Cargo.toml  function.json
functions/bench_process/: Cargo.toml  function.json
functions/dda_store_test/: Cargo.toml  function.json
(+887 files in other folders)
