# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[workspace]
members = [
    "edgeless_api",
    "edgeless_api_core",
    "edgeless_bal",
    "edgeless_benchmark",
    "edgeless_cli",
    "edgeless_function",
    "edgeless_con",
    "edgeless_inabox",
    "edgeless_node",
    "edgeless_orc",
    "edgeless_systemtests",
    "edgeless_telemetry",
    # "edgeless_embedded",
    # "examples/dda_demo/check_temperature",
    # "examples/dda_demo/move_arm",
    # "examples/dda_hello/hello_dda",
]