# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[workspace]
members = [
    "edgeless_api",
    "edgeless_api_core",
    "edgeless_bal",
    #"edgeless_benchmark",
    "edgeless_cli",
    "edgeless_container_function",
    "edgeless_function",
    "edgeless_con",
    "edgeless_inabox",
    "edgeless_node",
    #"edgeless_orc",
    "edgeless_systemtests",
    "edgeless_telemetry",
    "edgeless_embedded",
    "edgeless_embedded_emu",
    "edgeless_build",
    "edgeless_function_core",
    "edgeless_function_macro",
    "edgeless_config",
    "edgeless_link_multicast"
]