# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT
[workspace]
members = [
    "edgeless_api",
    "edgeless_api_core",
    "edgeless_bal",
    "edgeless_benchmark",
    "edgeless_cli",
    "edgeless_con",
    "edgeless_container_function",
    "edgeless_dda",
    "edgeless_embedded",
    "edgeless_embedded_emu",
    "edgeless_function",
    "edgeless_inabox",
    "edgeless_node",
    "edgeless_orc",
    "edgeless_systemtests",
    "edgeless_telemetry",
    "edgeless_cloud_offloading",
]

[workspace.dependencies]
opentelemetry = { version = "0.30.0", default-features = false, features = ["trace"] }

