[package]
name = "edgeless_api"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de"]
edition = "2021"

[lib]
name = "edgeless_api"
path = "src/lib.rs"

[features]
grpc_impl = ["dep:tokio", "dep:futures", "dep:tonic", "dep:prost", "tonic-build"]

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"], optional = true }
futures = {version = "0.3", optional = true}
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4"] }
async-trait = "0.1"
tonic = {version = "0.9", optional = true}
prost = {version = "0.11", optional = true}
regex = "1.8"

[build-dependencies]
tonic-build = {version = "0.9", optional = true}