# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_api"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.Technical University of Munich, Chair of Connected Mobility.de"]
edition = "2021"

[lib]
name = "edgeless_api"
path = "src/lib.rs"

[features]
grpc_impl = ["dep:tokio", "dep:futures", "dep:tonic", "dep:prost", "tonic-build"]

[dependencies]
edgeless_api_core = {path = "../edgeless_api_core" }
log = "0.4"
tokio = { version = "1", features = ["full"], optional = true }
futures = {version = "0.3", optional = true}
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4"] }
async-trait = "0.1"
tonic = {version = "0.9", optional = true}
prost = {version = "0.11", optional = true}
regex = "1.8"
serde = {version = "1", features=["derive"]}
minicbor =  {version = "0.19", default-features = false, features = ["derive"]}

[build-dependencies]
tonic-build = {version = "0.9", optional = true}