# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_api"
version = "1.1.0"
authors = [
    "Claudio Cicconetti <c.cicconetti@iit.cnr.it>",
    "Raphael Hetzel <hetzel@in.tum.de>",
]
edition = "2024"
rust-version = "1.85"
description = "EDGELESS gRPC API definitions"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[lib]
name = "edgeless_api"
path = "src/lib.rs"

[lints.clippy]
uninlined_format_args = "allow"

[features]
grpc_impl = [
    "dep:tokio",
    "dep:futures",
    "dep:tonic",
    "dep:prost",
    "tonic-build",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
edgeless_api_core = { path = "../edgeless_api_core" }
futures = { version = "0.3", optional = true }
get_if_addrs = "0.5.3"
heapless = { version = "0.8" }
log = "0.4"
minicbor = { version = "0.19", default-features = false, features = ["derive"] }
prost = { version = "0.13", optional = true }
prost-types = "0.14"
regex = "1.8"
rustls = { version = "0.23.32", features = ["ring"] }
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
toml = "0.9.8"
tonic = { version = "0.13", features = ["_tls-any"], optional = true }
uuid = { version = "1.3", features = ["v4", "serde"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
rustls-pemfile = "2.2.0"
rustls-tpm-signer = "0.1.0"
tokio-rustls = { version = "0.26.1", features = ["ring", "tls12"], default-features = true }
tonic-tls = { version = "0.5.0", default-features = false, features = ["rustls","openssl"] }

[build-dependencies]
tonic-build = { version = "0.13.1", optional = true, features = ["prost"] }
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"