[package]
name = "edgeless_api_core"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de"]
edition = "2021"

[lib]
name = "edgeless_api_core"
path = "src/lib.rs"

[features]
# grpc_impl = ["dep:tokio", "dep:futures", "dep:tonic", "dep:prost", "tonic-build"]

[dependencies]
log = "0.4"
# anyhow = "1.0"
# async-trait = "0.1"
# async_t = "0.7.0"
# tokio = { version = "1", features = ["full"], optional = true }
# futures = {version = "0.3", optional = true}
uuid = {version= "1.3", default-features = false, features = ["v4"] }
coap-lite = { version = "0.11", default-features = false }
minicbor =  {version = "0.19", default-features = false, features = ["derive"]}
# tonic = {version = "0.9", optional = true}
# prost = {version = "0.11", optional = true}
# regex = "1.8"
# serde = {version = "1", features=["derive"]}

# [build-dependencies]
# tonic-build = {version = "0.9", optional = true}