# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_api_core"
version = "1.0.0"
authors = [ "Claudio Cicconetti <c.cicconetti@iit.cnr.it>", "Raphael Hetzel <hetzel@in.tum.de>" ]
edition = "2021"
rust-version = "1.77"
description = "EDGELESS API definitions for embedded devices using CoAP"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[lib]
name = "edgeless_api_core"
path = "src/lib.rs"

[features]
# grpc_impl = ["dep:tokio", "dep:futures", "dep:tonic", "dep:prost", "tonic-build"]

[dependencies]
log = "0.4"
# anyhow = "1.0"
# async-trait = "0.1"
# async_t = "0.7.0"
# tokio = { version = "1", features = ["full"], optional = true }
# futures = {version = "0.3", optional = true}
uuid = {version= "1.3", default-features = false, features = ["v4"] }
coap-lite = { version = "0.11", default-features = false }
minicbor =  {version = "0.19", default-features = false, features = ["derive"]}
heapless = "0.8"
# tonic = {version = "0.9", optional = true}
# prost = {version = "0.11", optional = true}
# regex = "1.8"
# serde = {version = "1", features=["derive"]}

# [build-dependencies]
# tonic-build = {version = "0.9", optional = true}