# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_benchmark"
version = "0.1.0"
authors = ["Claudio Cicconetti <c.cicconetti@iit.cnr.it>"]
edition = "2021"

[lib]
name = "edgeless_benchmark"
path = "src/lib.rs"

[[bin]]
name = "edgeless_benchmark"
path = "src/bin/edgeless_benchmark.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4"] }
async-trait = "0.1"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
edgeless_cli = {path = "../edgeless_cli"}
edgeless_dataplane = { path = "../edgeless_dataplane" }
edgeless_node = { path = "../edgeless_node" }
edgeless_telemetry = { path = "../edgeless_telemetry" }
clap = { version = "4.3", features=["derive"] }
redis = "*"
serde = "1"
toml = "0.7"
serde_json = "1.0"
cargo = "0.77"
openssl = { version = "0.10", features = ["vendored"] }
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
rand_pcg = { version = "0.3" }