[package]
name = "edgeless_cli"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de"]
edition = "2021"

[[bin]]
name = "edgeless_cli"
path = "src/edgeless_cli.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4"] }
async-trait = "0.1"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}
clap = { version = "4.3", features=["derive"] }
serde = "1"
toml = "0.7"
serde_json = "1.0"
cargo = "0.72"