# SPDX-FileCopyrightText: © 2025 Worldline
# SPDX-License-Identifier: MIT

[package]
name = "cloud_offloading"
version = "0.1.0"
authors = [
    "Francisco Vicente <francisco.vicente@worldline.com>",
]
edition = "2024"
description = "EDGELESS Cloud Offloading"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"

[lib]
name = "cloud_offloading"
path = "src/lib.rs"

[[bin]]
name = "cloud_offloading"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.60.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.7"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8.5"
base64 = "0.22.1"
log = "0.4"
env_logger = "0.10"
uuid = "1.17.0"
edgeless_orc = { version = "1.0.0", path = "../edgeless_orc" }
edgeless_api = { version = "1.0.0", path = "../edgeless_api" }
anyhow = "1.0"
fs = "0.0.5"