# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_container_function"
version = "1.1.0"
authors = [ "Claudio Cicconetti <c.cicconetti@iit.cnr.it>" ]
edition = "2021"
rust-version = "1.76"
description = "Skeleton of a function to be deployed in EDGELESS as a container"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"


[lib]
name = "edgeless_container_function"
path = "src/lib.rs"

[lints.clippy]
uninlined_format_args = "allow"

[[bin]]
name = "edgeless_container_function_d"
path = "src/bin/edgeless_container_function_d.rs"

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = {version= "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.3", features=["derive"] }
toml = "0.7"
edgeless_api = {path = "../edgeless_api", features = ["grpc_impl"]}