[package]
name = "dda"
version = "0.1.0"
authors = [ "Lukasz Zalewski <zalewski.lukasz@siemens.com>" ]
edition = "2021"
build = "build.rs"

[lib]
name = "dda"
path = "src/lib.rs"

[features]

[dependencies]
edgeless_function = { path = "../edgeless_function" }
base64 = "0.22.1"
serde = {version = "1.0.204", features=["derive"] }
serde_json = "1.0"
prost = "0.12.6"
log = "0.4"

[build-dependencies]
prost-build = "0.12.6"