# SPDX-FileCopyrightText: © 2024 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2024 Siemens AG
# SPDX-License-Identifier: MIT

[package]
name = "dda"
version = "1.0.0"
authors = [ "Lukasz Zalewski <zalewski.lukasz@siemens.com>" ]
edition = "2021"
build = "build.rs"
description = "EDGELESS Data Distribution Agent"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../docs/README.md"

[lib]
name = "dda"
path = "src/lib.rs"

[features]

[dependencies]
edgeless_function = { path = "../edgeless_function" }
base64 = "0.22.1"
serde = {version = "1.0.204", features=["derive"] }
serde_json = "1.0"
prost = "0.12.6"
log = "0.4"

[build-dependencies]
prost-build = "0.12.6"