# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT

[package]
name = "edgeless_embedded"
version = "1.1.0"
authors = [ "Raphael Hetzel <hetzel@in.tum.de>" ]
edition = "2024"
resolver = "2"
description = "Special features for EDGELESS embedded devices"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[lib]
name = "edgeless_embedded"
path = "src/lib.rs"

[lints.clippy]
uninlined_format_args = "allow"

[dependencies]
embedded-hal = "1"

log = { version = "0.4", default-features = false }


embassy-executor = { version = "0.5.0", features=["task-arena-size-32768"] }
embassy-sync = { version = "0.5" }
embassy-time = { version = "0.3"}
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-futures = { version =  "0.1" }


static_cell = { version = "1.2.0" }
heapless = {version = "0.8", features = ["ufmt"]}
ufmt = "0.2"

uuid = {version= "1.3", default-features = false, features = ["v4"] }

edgeless_api_core = {path = "../edgeless_api_core" }

coap-lite = { version = "0.11", default-features = false }
minicbor =  {version = "0.19", default-features = false, features = ["derive"]}

smoltcp = { version = "0.11.0", default-features = false, features = [
  "socket",
  "async",
] }

# epd-waveshare = { path = "../vendor/epd-waveshare", features = ["graphics", "epd2in13_v3"], default-features = false}
# embedded-graphics = { version = "0.8"}
# sensor-scd30 = {path="../vendor/rust-sensor-scd30", default-features=false}
