# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT

[package]
name = "edgeless-embedded-emu"
version = "1.0.0"
authors = [ "Raphael Hetzel <hetzel@in.tum.de>" ]
edition = "2021"
resolver = "2"
description = "EDGELESS embedded devices emulator"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"
readme = "../README.md"

[dependencies]
log = { version = "0.4", default-features = false }
env_logger = "0.10"
embassy-executor = { version = "0.5.0", features = ["arch-std", "executor-thread", "integrated-timers", "log"] }
embassy-sync = { version = "0.5", features = ["log"] }
embassy-time = { version = "0.3",  features = ["std", "log"] }
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-futures = { version =  "0.1" }
embassy-net-tuntap = { version = "0.1" }

static_cell = { version = "1.2.0" }
heapless = "0.8"

uuid = {version= "1.3", default-features = false, features = ["v4"] }

edgeless_embedded = {path = "../edgeless_embedded" }
edgeless_api_core = {path = "../edgeless_api_core" }

embedded-io-async = { version = "0.6.0" }
embedded-hal = "1"

smoltcp = { version = "0.11.0", default-features = false, features = [
  "socket",
  "async",
] }
