# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-FileCopyrightText: © 2023 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-FileCopyrightText: © 2023 Siemens AG
# SPDX-License-Identifier: MIT
[workspace]

[package]
name = "edgeless-embedded-esp32"
version = "1.0.0"
authors = [ "Raphael Hetzel <hetzel@in.tum.de>" ]
edition = "2021"
resolver = "2"
rust-version = "1.73"
description = "Support of some ESP32 microcontrollers in EDGELESS"
homepage = "https://edgeless-project.eu/"
license = "MIT"
repository = "https://github.com/edgeless-project/edgeless/"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
opt-level = "s"
lto = "off"

[profile.dev]
debug = true
opt-level = 3
lto = "off"

[dependencies]
log = { version = "0.4", default-features = false }
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = {version = "0.2", features=["async"] }
esp-alloc = { version = "0.3.0" }


embassy-executor = { version = "0.5.0", features=["task-arena-size-32768"] }
embassy-sync = { version = "0.5" }
embassy-time = { version = "0.3", features = ["tick-hz-1_000_000", "generic-queue"]}
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-futures = { version =  "0.1" }
embassy-embedded-hal  = {version = "0.1" }

static_cell = { version = "1.2.0" }
heapless = "0.8"
once_cell = {version = "1.18", default-features = false, features = ["critical-section"]}

embedded-svc = { version = "0.25.1", default-features = false, features = [] }

getrandom = { version = "0.2", features = ["custom"] }
uuid = {version= "1.3", default-features = false, features = ["v4"] }

edgeless_embedded = {path = "../edgeless_embedded" }
edgeless_api_core = {path = "../edgeless_api_core" }


smoltcp = { version = "0.11.0", default-features = false, features = [
  "socket",
  "async",
] }

epd-waveshare = { git = "https://github.com/edgeless-project/epd-waveshare.git", branch = "edgeless_fork", features = ["graphics", "epd2in13_v3"], default-features = false}
embedded-graphics = { version = "0.8"}
sensor-scd30 = { git = "https://github.com/edgeless-project/rust-sensor-scd30.git", branch = "edgeless_fork", default-features=false }

[target.xtensa-esp32-none-elf.dependencies]
hal = { package = "esp-hal", version="0.18", features = ["async" ] }
esp-backtrace = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", default-features=false, features = ["esp32", "uart", "log", "critical-section"] }
esp-wifi = { version = "0.6", features = ["esp32", "utils", "async", "wifi", "embassy-net"] }

esp-hal-embassy = { version = "0.1.0", features = [
    "time-timg0",            # Compatible with all chips
    # "time-systimer-16mhz", # Compatible with all chips except ESP32 and ESP32-S2
    # "time-systimer-80mhz", # Compatible with ESP32-S2 only
] }

[target.xtensa-esp32s3-none-elf.dependencies]
hal = { package = "esp-hal", version="0.18", features = ["async" ] }
esp-backtrace = { version = "0.8.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", default-features=false, features = ["esp32s3", "uart", "log", "critical-section"] }
esp-wifi = { version = "0.6", features = ["esp32s3", "utils", "async", "wifi", "embassy-net"] }
esp-hal-embassy = { version = "0.1.0", features = [
    "time-timg0",            # Compatible with all chips
    # "time-systimer-16mhz", # Compatible with all chips except ESP32 and ESP32-S2
    # "time-systimer-80mhz", # Compatible with ESP32-S2 only
] }

[features]
# GDEH0213B73
epaper_2_13 = []
scd30 = []
tum_node_2_13 = ["epaper_2_13", "scd30"]

[build-dependencies]
embuild = "0.31.2"
authors = [ "Technical University of Munich, Chair of Connected Mobility" ]
