# SPDX-FileCopyrightText: © 2023 Technical University of Munich, Chair of Connected Mobility
# SPDX-License-Identifier: MIT
[package]
name = "edgeless_function"
version = "0.1.0"
authors = ["Raphael Hetzel <hetzel@in.tum.de>"]
edition = "2021"

[lib]
name = "edgeless_function"
path = "src/lib.rs"

[features]
std = []
# alloc= []
default = ["std"]

[dependencies]
log = "0.4"